--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -1,5 +1,6 @@
 @import "./normalize.css";
 @import "~antd/dist/antd.css";
+@import "../iconfont/iconfont.css";
 
 body{
   font-family: Microsoft YaHei;
